<resources>
    <string name="app_name">BotServer</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_nodo">Nombre del Nodo</string>
    <string name="nombre_sensor">Nombre del Sensor</string>
    <string name="nombre_actuador">Nombre del Actuador</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">Usuario</string>
    <string name="input_user">usuario</string>
    <string name="input_password">password</string>
    <string name="user_save">Guardar</string>
    <string name="takephoto">Tomar Foto?</string>
</resources>
