<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NodoUpdateInfoActivity">

    <EditText
        android:id="@+id/edNodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_nodo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_sensor"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edActuador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_actuador"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/cbTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/takephoto" />

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />
</LinearLayout>